# pryces

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  architect_improvements.md  monitor.json.example  pryces_pending_optimizations.md  pyproject.toml  technical_debt.md
.github/workflows/: ci.yml
configs/: example.json
docs/: backlog.md  technical_debt.md  test_quality_review.md  volume_notifications_research.md
scripts/hooks/: pre-commit
src/pryces/: __init__.py
src/pryces/application/: __init__.py  dtos.py  exceptions.py  interfaces.py  providers.py  repositories.py  senders.py  services.py
src/pryces/application/providers/: __init__.py  dtos.py  interfaces.py
src/pryces/application/use_cases/: __init__.py  get_stock_price.py  get_stocks_prices.py  get_stocks_statistics.py  get_target_prices.py  send_messages.py  sync_target_prices.py  trigger_stocks_notifications.py  trigger_stocks_statistics.py  update_price_targets.py  update_target_prices.py
src/pryces/domain/: __init__.py  notification_formatter.py  notification_result.py  notifications.py  price_targets.py  stock_statistics.py  stocks.py  target_prices.py  utils.py
src/pryces/infrastructure/: __init__.py  configs.py  exceptions.py  factories.py  formatters.py  implementations.py  logging.py  messages.py  providers.py  receivers.py  repositories.py  senders.py
src/pryces/presentation/: __init__.py
src/pryces/presentation/console/: __init__.py  cli.py  factories.py  formatters.py  input_utils.py  json_utils.py  menu.py  utils.py
src/pryces/presentation/scripts/: bot_commands.py  config.py  config_refresher.py  exceptions.py  factories.py  formatters.py  monitor_stocks.py  report_stocks_statistics.py  telegram_bot.py
tests/: __init__.py
tests/application/: conftest.py  test_dtos.py  test_services.py
tests/application/use_cases/: test_get_stock_price.py  test_get_stocks_prices.py  test_get_stocks_statistics.py  test_get_target_prices.py  test_send_messages.py  test_sync_target_prices.py  test_trigger_stocks_notifications.py  test_trigger_stocks_statistics.py  test_update_price_targets.py  test_update_target_prices.py
tests/domain/: conftest.py  test_notification_formatter.py  test_notifications.py  test_price_targets.py  test_stock_statistics.py  test_stocks.py  test_stocks_creation.py  test_stocks_deduplication.py  test_stocks_notifications.py  test_stocks_targets.py  test_target_prices.py  test_utils.py
tests/fixtures/: __init__.py  factories.py  mock_stock_price_provider.py
tests/infrastructure/: conftest.py  test_configs.py  test_factories.py  test_fire_and_forget_message_sender.py  test_formatters.py  test_logging.py  test_providers.py  test_receivers.py  test_repositories.py  test_retry_message_sender.py  test_telegram_message_sender.py  test_yahoo_finance_provider.py
tests/presentation/console/: __init__.py  test_factories.py  test_formatters.py  test_input_utils.py  test_json_utils.py  test_menu.py  test_output_utils.py  test_utils.py
tests/presentation/scripts/: factories.py  test_bot_commands.py  test_config.py  test_formatters.py  test_monitor_stocks.py  test_report_stocks_statistics.py  test_telegram_bot.py
(+34 files in other folders)
