[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pryces"
version = "0.1.0"
description = "A clean architecture Python project"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "phantomarko"}
]
dependencies = [
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["src"]
